Create recipe page in recipes folder
Add link to the recipe page in index.html with the name of recipe. Fill recipe page with heading and image.

--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
+    <a
+      href="./recipes/tender_tomato_chicken_breasts.html"
+      target="_blank"
+      rel="noopener noreferrer"
+      >Tender Tomato Chicken Breasts</a
+    >
   </body>
 </html>
