Add one more recipe page with the same structure
Make links to the recipes in unordered list.
Add links to original recipes in the recipes pages.

--- a/recipes/tender_tomato_chicken_breasts.html
+++ b/recipes/tender_tomato_chicken_breasts.html
@@ -49,5 +49,11 @@
         from the skillet to serve.
       </li>
     </ol>
+    <a
+      href="https://www.allrecipes.com/recipe/88924/tender-tomato-chicken-breasts/"
+      target="_blank"
+      rel="noopener noreferrer"
+      >Link to original recipe</a
+    >
   </body>
 </html>
