--- a/index.html
+++ b/index.html
@@ -7,11 +7,23 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a
-      href="./recipes/tender_tomato_chicken_breasts.html"
-      target="_blank"
-      rel="noopener noreferrer"
-      >Tender Tomato Chicken Breasts</a
-    >
+    <ul>
+      <li>
+        <a
+          href="./recipes/tender_tomato_chicken_breasts.html"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Tender Tomato Chicken Breasts</a
+        >
+      </li>
+      <li>
+        <a
+          href="./recipes/italian_spaghetti_sauce_with_meatballs.html"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Italian Spaghetti Sauce with Meatballs</a
+        >
+      </li>
+    </ul>
   </body>
 </html>
