Add one more recipe

--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
           >Italian Spaghetti Sauce with Meatballs</a
         >
       </li>
+      <li>
+        <a
+          href="./recipes/shakshuka.html"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Chef John's Shakshuka</a
+        >
+      </li>
     </ul>
   </body>
 </html>
