--- a/recipes/italian_spaghetti_sauce_with_meatballs.html
+++ b/recipes/italian_spaghetti_sauce_with_meatballs.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Italian Spaghetti Sauce with Meatballs</title>
+    <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
     <h1>Italian Spaghetti Sauce with Meatballs</h1>
