--- a/recipes/tender_tomato_chicken_breasts.html
+++ b/recipes/tender_tomato_chicken_breasts.html
@@ -8,53 +8,67 @@
   </head>
   <body>
     <h1>Tender Tomato Chicken Breasts</h1>
-    <img
-      src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F1129841.jpg&q=60&c=sc&orient=true&poi=auto&h=512"
-      alt="Tender Tomato Chicken Breasts"
-    />
-    <h2>Description</h2>
-    <p>
-      This stewed chicken and tomato recipe is a light, juicy, flavorful dish.
-      Being a mom of a 7-month-old child, I've learned to take a lot of
-      shortcuts and still be able to cook quality food. This is quick, easy, and
-      tasty. If you absolutely must use fresh veggies, that's ok, but frozen
-      veggies, in my opinion, work a little bit better. Serve with rice, if
-      desired. To kick it up a bit, add chopped green peppers in with the
-      tomatoes.
-    </p>
-    <h2>Ingredients</h2>
-    <ul>
-      <li>1 tablespoon olive oil</li>
-      <li>3 skinless, boneless chicken breast halves</li>
-      <li>1 tablespoon ground black pepper, or to taste</li>
-      <li>3 tablespoons onion powder, or to taste</li>
-      <li>1 (28 ounce) can chopped stewed tomatoes, 1/2 the liquid reserved</li>
-      <li>1 (14 ounce) can chicken broth</li>
-      <li>1 (10 ounce) package frozen mixed vegetables</li>
-      <li>¼ cup water</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-      <li>
-        Heat oil in a skillet over medium heat. Season chicken breasts on both
-        sides with pepper and onion powder, and arrange in the skillet. Cook 2
-        minutes on each side, just until browned. Pour tomatoes and reserved
-        liquid over chicken. Pour in broth. Cover skillet, and continue cooking
-        15 minutes on each side, until chicken juices run clear.
-      </li>
-      <li>
-        While chicken is cooking, place frozen mixed vegetables and water in a
-        pot. Scoop about 3/4 cup liquid from the skillet, and mix into the pot.
-        Bring to a boil, and cook 5 minutes, or until vegetables are tender;
-        drain. Arrange chicken breasts over vegetables, and drizzle with liquid
-        from the skillet to serve.
-      </li>
-    </ol>
-    <a
-      href="https://www.allrecipes.com/recipe/88924/tender-tomato-chicken-breasts/"
-      target="_blank"
-      rel="noopener noreferrer"
-      >Link to original recipe</a
-    >
+    <div class="img-container">
+      <img
+        class="img-recipe"
+        src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F1129841.jpg&q=60&c=sc&orient=true&poi=auto&h=512"
+        alt="Tender Tomato Chicken Breasts"
+      />
+    </div>
+    <div class="description-container">
+      <h2>Description</h2>
+      <p>
+        This stewed chicken and tomato recipe is a light, juicy, flavorful dish.
+        Being a mom of a 7-month-old child, I've learned to take a lot of
+        shortcuts and still be able to cook quality food. This is quick, easy,
+        and tasty. If you absolutely must use fresh veggies, that's ok, but
+        frozen veggies, in my opinion, work a little bit better. Serve with
+        rice, if desired. To kick it up a bit, add chopped green peppers in with
+        the tomatoes.
+      </p>
+    </div>
+    <div class="ingredients-container">
+      <h2>Ingredients</h2>
+      <ul>
+        <li>1 tablespoon olive oil</li>
+        <li>3 skinless, boneless chicken breast halves</li>
+        <li>1 tablespoon ground black pepper, or to taste</li>
+        <li>3 tablespoons onion powder, or to taste</li>
+        <li>
+          1 (28 ounce) can chopped stewed tomatoes, 1/2 the liquid reserved
+        </li>
+        <li>1 (14 ounce) can chicken broth</li>
+        <li>1 (10 ounce) package frozen mixed vegetables</li>
+        <li>¼ cup water</li>
+      </ul>
+    </div>
+    <div class="steps-container">
+      <h2>Steps</h2>
+      <ol>
+        <li>
+          Heat oil in a skillet over medium heat. Season chicken breasts on both
+          sides with pepper and onion powder, and arrange in the skillet. Cook 2
+          minutes on each side, just until browned. Pour tomatoes and reserved
+          liquid over chicken. Pour in broth. Cover skillet, and continue
+          cooking 15 minutes on each side, until chicken juices run clear.
+        </li>
+        <li>
+          While chicken is cooking, place frozen mixed vegetables and water in a
+          pot. Scoop about 3/4 cup liquid from the skillet, and mix into the
+          pot. Bring to a boil, and cook 5 minutes, or until vegetables are
+          tender; drain. Arrange chicken breasts over vegetables, and drizzle
+          with liquid from the skillet to serve.
+        </li>
+      </ol>
+    </div>
+    <div class="link-to-original-container">
+      <a
+        class="link-to-original"
+        href="https://www.allrecipes.com/recipe/88924/tender-tomato-chicken-breasts/"
+        target="_blank"
+        rel="noopener noreferrer"
+        ><h2>You can see original recipe here</h2></a
+      >
+    </div>
   </body>
 </html>
