Add styles to index.html (main page)

--- a/index.html
+++ b/index.html
@@ -6,33 +6,113 @@
     <title>Recipes</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body id="index-body">
     <h1>Odin Recipes</h1>
-    <ul class="recipes">
-      <li>
-        <a
-          href="./recipes/tender_tomato_chicken_breasts.html"
-          target="_blank"
-          rel="noopener noreferrer"
-          >Tender Tomato Chicken Breasts</a
-        >
-      </li>
-      <li>
-        <a
-          href="./recipes/italian_spaghetti_sauce_with_meatballs.html"
-          target="_blank"
-          rel="noopener noreferrer"
-          >Italian Spaghetti Sauce with Meatballs</a
-        >
-      </li>
-      <li>
-        <a
-          href="./recipes/shakshuka.html"
-          target="_blank"
-          rel="noopener noreferrer"
-          >Chef John's Shakshuka</a
-        >
-      </li>
-    </ul>
+    <div class="recipes-list">
+      <ul class="recipes">
+        <li>
+          <a
+            href="./recipes/tender_tomato_chicken_breasts.html"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><div class="recipe-preview-container">
+              <div class="img-recipe-preview-container">
+                <img
+                  class="img-recipe-preview"
+                  src="imgs/tender_tomato_chicken_breasts.jpeg"
+                  alt="Tender Tomato Chicken Breasts"
+                />
+              </div>
+              Tender Tomato Chicken Breasts
+            </div></a
+          >
+        </li>
+        <li>
+          <a
+            href="./recipes/italian_spaghetti_sauce_with_meatballs.html"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><div class="recipe-preview-container">
+              <div class="img-recipe-preview-container">
+                <img
+                  class="img-recipe-preview"
+                  src="imgs/italian_spaghetti_sauce_with_meatballs.jpeg"
+                  alt="Italian Spaghetti Sauce with Meatballs"
+                />
+              </div>
+              Italian Spaghetti Sauce with Meatballs
+            </div></a
+          >
+        </li>
+        <li>
+          <a
+            href="./recipes/shakshuka.html"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><div class="recipe-preview-container">
+              <div class="img-recipe-preview-container">
+                <img
+                  class="img-recipe-preview"
+                  src="imgs/shakshuka.jpeg"
+                  alt="Chef John's Shakshuka"
+                />
+              </div>
+              Chef John's Shakshuka
+            </div></a
+          >
+        </li>
+        <li>
+          <a
+            href="./recipes/tender_tomato_chicken_breasts.html"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><div class="recipe-preview-container">
+              <div class="img-recipe-preview-container">
+                <img
+                  class="img-recipe-preview"
+                  src="imgs/tender_tomato_chicken_breasts.jpeg"
+                  alt="Tender Tomato Chicken Breasts"
+                />
+              </div>
+              Tender Tomato Chicken Breasts
+            </div></a
+          >
+        </li>
+        <li>
+          <a
+            href="./recipes/italian_spaghetti_sauce_with_meatballs.html"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><div class="recipe-preview-container">
+              <div class="img-recipe-preview-container">
+                <img
+                  class="img-recipe-preview"
+                  src="imgs/italian_spaghetti_sauce_with_meatballs.jpeg"
+                  alt="Italian Spaghetti Sauce with Meatballs"
+                />
+              </div>
+              Italian Spaghetti Sauce with Meatballs
+            </div></a
+          >
+        </li>
+        <li>
+          <a
+            href="./recipes/shakshuka.html"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><div class="recipe-preview-container">
+              <div class="img-recipe-preview-container">
+                <img
+                  class="img-recipe-preview"
+                  src="imgs/shakshuka.jpeg"
+                  alt="Chef John's Shakshuka"
+                />
+              </div>
+              Chef John's Shakshuka
+            </div></a
+          >
+        </li>
+      </ul>
+    </div>
   </body>
 </html>
