--- a/recipes/italian_spaghetti_sauce_with_meatballs.html
+++ b/recipes/italian_spaghetti_sauce_with_meatballs.html
@@ -11,7 +11,7 @@
     <div class="img-container">
       <img
         class="img-recipe"
-        src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8815993.jpg&q=60&c=sc&orient=true&poi=auto&h=512"
+        src="../imgs/italian_spaghetti_sauce_with_meatballs.jpeg"
         alt="Italian Spaghetti Sauce with Meatballs"
       />
     </div>
