--- a/recipes/shakshuka.html
+++ b/recipes/shakshuka.html
@@ -11,7 +11,7 @@
     <div class="img-container">
       <img
         class="img-recipe"
-        src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2F988905fbc00c682680c6204e8cb24b8e%2F1669292452147IMG_20221117_142623917.jpg&q=60&c=sc&orient=true&poi=auto&h=512"
+        src="../imgs/shakshuka.jpeg"
         alt="Chef John's Shakshuka"
       />
     </div>
