--- a/recipes/tender_tomato_chicken_breasts.html
+++ b/recipes/tender_tomato_chicken_breasts.html
@@ -11,7 +11,7 @@
     <div class="img-container">
       <img
         class="img-recipe"
-        src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F1129841.jpg&q=60&c=sc&orient=true&poi=auto&h=512"
+        src="../imgs/tender_tomato_chicken_breasts.jpeg"
         alt="Tender Tomato Chicken Breasts"
       />
     </div>
